# cmake-example

./: .gitiginore  CMakeLists.txt  main.cpp
include/: lib.h
lib/: CMakeLists.txt  lib.cpp
test/include/: helpers.h
test/test1/: test.cpp  test1.1.cpp
test/test2/: test2.cpp
